# booksim2

./: .gitignore  .gitmodules
utils/: circulant_builder.py  results_parser.py  sim_runner.py
utils/bswrap/: .gitignore  pyproject.toml  requirements.txt
utils/bswrap/src/: configs.py  main.py  runner.py  sim_runner.py  simulator.py  user_config.py
utils/bswrap/src/model/: __init__.py  csv_repo.py  iface.py  models.py
